test/fail/class-return.grace
class name.new { return }

name.new
